--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 
 <html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" rel="stylesheet">
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6 image-container upper-left">hi</div>
-    <div class="col-sm-6 image-container upper-right">there</div>
-  </div>
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container-fluid">
     <div class="row">
-    <div class="col-sm-6 image-container lower-left">I</div>
-    <div class="col-sm-6 image-container lower-right"> here</div>
+      <div class="col-sm-6 image-container upper-left">hi</div>
+      <div class="col-sm-6 image-container upper-right">there</div>
+    </div>
+      <div class="row">
+      <div class="col-sm-6 image-container lower-left">I</div>
+      <div class="col-sm-6 image-container lower-right"> here</div>
+    </div>
   </div>
-</div>
+</body>
 </html>
