--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 image-container upper-left">hi</div>
+      <div class="col-sm-6 image-container upper-left">hi
+      background-image: url (images/football.jpg)
+    </div>
       <div class="col-sm-6 image-container upper-right">there</div>
     </div>
       <div class="row">
