Flex box attempt

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 image-container upper-left">hi</div>
-      <div class="col-sm-6 image-container upper-right">there</div>
-    </div>
+  <section class="fill-height-or-more">
+    <div class="container-fluid">
       <div class="row">
-      <div class="col-sm-6 image-container lower-left">I</div>
-      <div class="col-sm-6 image-container lower-right"> here</div>
+        <div class="col-sm-6 image-container upper-left">hi</div>
+        <div class="col-sm-6 image-container upper-right">there</div>
+      </div>
+        <div class="row">
+        <div class="col-sm-6 image-container lower-left">I</div>
+        <div class="col-sm-6 image-container lower-right"> here</div>
+      </div>
     </div>
-  </div>
+  </section>
 </body>
 </html>
