--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 
-<html>
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-</head>
 <body>
-  <section class="fill-height-or-more">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6 image-container upper-left">hi</div>
-        <div class="col-sm-6 image-container upper-right">there</div>
+        <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> <p><b><font size="6">April 6, 2017  7-9pm</font></b></p><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
+        <div class="col-sm-6 image-container bottom">
+          <a href="https://codepen.io/jenniferlohagan/pen/xqaJwb"><h1>About</h1></a></div>
+      </div>
+        <div class="col-sm-6 image-container upper-left">
+          <a href="https://codepen.io/jenniferlohagan/pen/MpqbML"><h1>Location</h1></a></div>
+        <div class="col-sm-6 image-container upper-right">
+          <a href="https://codepen.io/jenniferlohagan/pen/zZJWKY?editors=1100"><h1>Tickets</h1></a></div>
       </div>
         <div class="row">
-        <div class="col-sm-6 image-container lower-left">I</div>
-        <div class="col-sm-6 image-container lower-right"> here</div>
+          <div class="col-sm-6 image-container lower-left">
+            <a href="https://codepen.io/jenniferlohagan/pen/WpgzGg?editors=1100"><h1>Sponsors</h1></a></div>
+
+      </div>
       </div>
     </div>
-  </section>
 </body>
-</html>
