--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
+</head>
+
 <body>
     <div class="container-fluid">
       <div class="row">
