Fixed landing links

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
       <div class="row">
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> <p><b><font size="6">April 6, 2017  7-9pm</font></b></p><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
-          <a href="https://codepen.io/jenniferlohagan/pen/xqaJwb"><h1>About</h1></a></div>
+          <a href="videosforastadium/About"><h1>About</h1></a></div>
       </div>
         <div class="col-sm-6 image-container upper-left">
-          <a href="https://codepen.io/jenniferlohagan/pen/MpqbML"><h1>Location</h1></a></div>
+          <a href="videosforastadium/Location"><h1>Location</h1></a></div>
         <div class="col-sm-6 image-container upper-right">
-          <a href="https://codepen.io/jenniferlohagan/pen/zZJWKY?editors=1100"><h1>Tickets</h1></a></div>
+          <a href="videosforastadium/Tickets"><h1>Tickets</h1></a></div>
       </div>
         <div class="row">
           <div class="col-sm-6 image-container lower-left">
-            <a href="https://codepen.io/jenniferlohagan/pen/WpgzGg?editors=1100"><h1>Sponsors</h1></a></div>
+            <a href="videosforastadium/Sponsors"><h1>Sponsors</h1></a></div>
 
       </div>
       </div>
