Changed back link on all pages

--- a/Location.html
+++ b/Location.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <a href="https://codepen.io/jenniferlohagan/pen/LWJbjw"><h4>Back</h4></a></h4>
+        <div id="nav"><a href="index.html"><h4>Back</h4></a></h4>
         <p>
         The event will be held at Commonwealth Stadium. Free parking is available in the Green Lot behind the stadium. </p>
           <div style="text-align: center">
