--- a/Tickets.html
+++ b/Tickets.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <a href="https://codepen.io/jenniferlohagan/pen/LWJbjw"><h4>Back</h4></a>
+      <div id="nav"><a href="index.html"><h4>Back</h4></a>
         <p>
         Tickets are $15 for general public and $10 for Museum members.
 Funds raised at this event will go to support the Museum’s FREE Admission policy.
