--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3>
-          <p2>April 6, 2017  7-9pm</p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
+          <font size="4">April 6, 2017  7-9pm</font><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
           <a href="videosforastadium/About"><div id="nav"><a href="About.html"><h1>About</h1></a></div>
       </div>
