Added <body> to pages and fixed </divs>

--- a/About.html
+++ b/About.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
+
+<body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>About</h1>
@@ -26,7 +28,6 @@ Carl Nathe, the public address announcer at UK Football games, will introduce ea
 
           </div>
       </div>
-    </div>
   </div>
 
 </body>
