--- a/Location.html
+++ b/Location.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='a-s345/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
+<body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Location</h1>
@@ -26,6 +27,7 @@
       </div>
     </div>
   </div>
-
+</div>
 </body>
+
 </html>
