--- a/Tickets.html
+++ b/Tickets.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='a-s345/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
+
+<body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h2>Tickets</h2>
@@ -17,14 +19,14 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-      <div id="nav"><a href="index.html"><h4>Back</h4></a>
+        <div id="nav"><a href="index.html"><h4>Back</h4></a>
         <p>
         Tickets are $15 for general public and $10 for Museum members.
 Funds raised at this event will go to support the Museum’s FREE Admission policy.
 
 Tickets are available online <a href="https://trans.worldpay.us/cgi-bin/WebPAY.cgi?formid=BB250F6BC14110CEDBAD22AF7FDFCB2CD3D1EF04DBC70B6A4745131920DB8B5E&sessionid=AE46DACB8992AE4C">here</a>.
  </p>
-
+        </div>
       </div>
     </div>
   </div>
