--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3>
           <p2>April 6, 2017  7-9pm</p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
-          <a href="videosforastadium/About"><div id="nav"><a href="about.html"><h1>About</h1></a></div>
+          <a href="videosforastadium/about"><div id="nav"><a href="about.html"><h1>About</h1></a></div>
         </div>
         <div class="col-sm-6 image-container upper-left">
-          <a href="videosforastadium/Location"><div id="nav"><a href="aocation.html"><h1>Location</h1></a></div>
+          <a href="videosforastadium/location"><div id="nav"><a href="aocation.html"><h1>Location</h1></a></div>
         <div class="col-sm-6 image-container upper-right">
-          <a href="videosforastadium/Tickets"><div id="nav"><a href="tickets.html"><h1>Tickets</h1></a></div>
+          <a href="videosforastadium/tickets"><div id="nav"><a href="tickets.html"><h1>Tickets</h1></a></div>
       </div>
         <div class="row">
           <div class="col-sm-6 image-container lower-left">
-            <a href="videosforastadium/Sponsors"><div id="nav"><a href="sponsors.html"><h1>Sponsors</h1></a></div>
+            <a href="videosforastadium/sponsors"><div id="nav"><a href="sponsors.html"><h1>Sponsors</h1></a></div>
 
       </div>
       </div>
