--- a/About.html
+++ b/About.html
@@ -21,9 +21,8 @@
         <div id="nav"><a href="index.html"><h4>Back</h4></a></h4></div>
         <p>
         This unique "art meets sports” event explores competition, skill, endurance, teamwork, and body movement. The national anthem, the green grass of various fields, and sports language are also examined. The videos will be presented on the stadium’s high resolution screen and viewed from field level seats in the end zone.</p>
-      <p>Participating artists include Paul S. Benjamin, Janet Biggs, Victoria Fu, Brett Kashmere, Anya Liftig, Lilly McElroy, Didier Morelli, Michael David Murphy, Alix Pearlstein, Joe Sola, and Scott Stark.
-
-Carl Nathe, the public address announcer at UK Football games, will introduce each artist’s work and provide commentary. Concession food and drinks that are normally available during games will be offered for purchase before and after the screening.</p>
+        <p>Participating artists include Paul S. Benjamin, Janet Biggs, Victoria Fu, Brett Kashmere, Anya Liftig, Lilly McElroy, Didier Morelli, Michael David Murphy, Alix Pearlstein, Joe Sola, and Scott Stark.
+        <p>Carl Nathe, the public address announcer at UK Football games, will introduce each artist’s work and provide commentary. Concession food and drinks that are normally available during games will be offered for purchase before and after the screening.</p>
 
 
           </div>
