--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="videosforastadium/about"><div id="nav"><a href="about.html"><h1>About</h1></a></div>
         </div>
         <div class="col-sm-6 image-container upper-left">
-          <a href="videosforastadium/location"><div id="nav"><a href="aocation.html"><h1>Location</h1></a></div>
+          <a href="videosforastadium/location"><div id="nav"><a href="location.html"><h1>Location</h1></a></div>
         <div class="col-sm-6 image-container upper-right">
           <a href="videosforastadium/tickets"><div id="nav"><a href="tickets.html"><h1>Tickets</h1></a></div>
       </div>
