--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3>
           <p2>April 6, 2017  7-9pm</p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
-          <a href="videosforastadium/About"><div id="nav"><a href="About.html"><h1>About</h1></a></div>
+          <a href="documents/videosforastadium/About"><div id="nav"><a href="About.html"><h1>About</h1></a></div>
         </div>
         <div class="col-sm-6 image-container upper-left">
           <a href="videosforastadium/Location"><div id="nav"><a href="Location.html"><h1>Location</h1></a></div>
@@ -24,7 +24,7 @@
           <div class="col-sm-6 image-container lower-left">
             <a href="videosforastadium/Sponsors"><div id="nav"><a href="Sponsors.html"><h1>Sponsors</h1></a></div>
 
-      </div>
-      </div>
+          </div>
+        </div>
     </div>
 </body>
