--- a/Sponsors.html
+++ b/Sponsors.html
@@ -6,7 +6,7 @@
     Videos For a Stadium: Sponsors
   </title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="videosforastadium/style.css" rel='stylesheet' type='text/css'>
+    <link href='videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
