--- a/Sponsors.html
+++ b/Sponsors.html
@@ -20,17 +20,19 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <div style="text-align: center">
+        <div style="text-align: left">
           <div id="nav"><a href="index.html"><h4>Back</h4></a>
-          <img src="http://static.wixstatic.com/media/122333_4f4a7413f77549f89304a3c8167db76c~mv2.png_srz_310_245_85_22_0.50_1.20_0.00_png_srz">
-          <img src="https://static1.squarespace.com/static/55e39f6ce4b0fe8647d21e24/t/58475090725e25ae983ab13f/1481068700469/" width="500px">
-          <p>
+            <div style="text-align: center">
+            <img src="http://static.wixstatic.com/media/122333_4f4a7413f77549f89304a3c8167db76c~mv2.png_srz_310_245_85_22_0.50_1.20_0.00_png_srz">
+            <img src="https://static1.squarespace.com/static/55e39f6ce4b0fe8647d21e24/t/58475090725e25ae983ab13f/1481068700469/" width="500px">
+            <p>
           </div>
         Videos For a Stadium is sponsored by Creative Lexington and Moontower Music Festival. You can visit them at <a href="http://www.creativelexington.com"> creativelexington.com</a> and <a href="http://www.moontowermusicfestival.com"> moontowermusicfestival.com</a></p>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 </body>
 </html>
