--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
           <p><b><font size="6">April 6, 2017  7-9pm</font></b></p><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
-          <div id="nav"><a href="documents/a-s345/videosforastadium/About.html"><h1>About</h1></a></div>
+          <a href="documents/a-s345/videosforastadium/About.html"><h1>About</h1></a></div>
       </div>
         <div class="col-sm-6 image-container upper-left">
           <a href="documents/a-s345/videosforastadium/Location.html"><h1>Location</h1></a></div>
