--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <a href="About.html"><button><h1>About</h1></button></a></div>
       </div>
         <div class="col-sm-6 image-container upper-left">
-          <div id="nav"><a href="Location.html"><h1>Location</h1></a></div>
+          <a href="Location.html"><button><h1>Location</h1></button></a></div>
         <div class="col-sm-6 image-container upper-right">
-          <a href="documents/a-s345/videosforastadium/Tickets.html"><h1>Tickets</h1></a></div>
+          <a href="Tickets.html"><button><h1>Tickets</h1></button></a></div>
       </div>
         <div class="row">
           <div class="col-sm-6 image-container lower-left">
-            <a href="documents/a-s345/videosforastadium/Sponsors.html"><h1>Sponsors</h1></a></div>
+            <a href="Sponsors.html"><button><h1>Sponsors</h1></button></a></div>
 
       </div>
       </div>
