--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
           <p><b><font size="6">April 6, 2017  7-9pm</font></b></p><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
-          <a href="About.html"><button><h1>About</h1></button></a></div>
+          <a href="About.html"><h1>About</h1></a></div>
       </div>
         <div class="col-sm-6 image-container upper-left">
-          <a href="Location.html"><button><h1>Location</h1></button></a></div>
+          <a href="Location.html"><h1>Location</h1></a></div>
         <div class="col-sm-6 image-container upper-right">
-          <a href="Tickets.html"><button><h1>Tickets</h1></button></a></div>
+          <a href="Tickets.html"><h1>Tickets</h1></a></div>
       </div>
         <div class="row">
           <div class="col-sm-6 image-container lower-left">
-            <a href="Sponsors.html"><button><h1>Sponsors</h1></button></a></div>
+            <a href="Sponsors.html"><h1>Sponsors</h1></a></div>
 
       </div>
       </div>
