fix about font color

--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <div id="nav"><a href="index.html"><h4>Back</h4></a></h4>
+        <div id="nav"><a href="index.html"><h4>Back</h4></a></div>
         <p>
         This unique "art meets sports” event explores competition, skill, endurance, teamwork, and body movement. The national anthem, the green grass of various fields, and sports language are also examined. The videos will be presented on the stadium’s high resolution screen and viewed from field level seats in the end zone.</p>
       <p>Participating artists include Paul S. Benjamin, Janet Biggs, Victoria Fu, Brett Kashmere, Anya Liftig, Lilly McElroy, Didier Morelli, Michael David Murphy, Alix Pearlstein, Joe Sola, and Scott Stark.
