--- a/Location.html
+++ b/Location.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <<div class="container-fluid">
+  <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Location</h1>
     </div>
