--- a/Location.html
+++ b/Location.html
@@ -7,7 +7,7 @@
   </title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href='videosforastadium/style.css' rel='stylesheet' type='text/css'>
+    <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
