--- a/Sponsors.html
+++ b/Sponsors.html
@@ -6,14 +6,13 @@
     Videos For a Stadium: Sponsors
   </title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href='videosforastadium/style.css' rel='stylesheet' type='text/css'>
+    <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
-
-      <h2>Sponsors</h2>
+      <h1>Sponsors</h1>
     </div>
   </div>
 
