--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href='videosforastadium/style.css' rel='stylesheet' type='text/css'>
+    <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 
 </head>
 
