--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid-bottom">
     <div class="jumbotron text-center">
       <h1>About</h1>
     </div>
