--- a/Sponsors.html
+++ b/Sponsors.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid-lower-left">
     <div class="jumbotron text-center">
       <h1>Sponsors</h1>
     </div>
