--- a/Tickets.html
+++ b/Tickets.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid-upper-right">
     <div class="jumbotron text-center">
       <h1>Tickets</h1>
     </div>
