--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
+    p2{
+      font-family:'Open Sans', sans-serif;
+      text-align:center;
+      color:white;
+      font-size:4em;
+      margin-left:auto;
+      margin-right:auto;
+      padding:1em;
+
+    }
 
 </head>
 
