--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
-    
 
 </head>
 
@@ -13,7 +12,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
-          <p><b><font size="6">April 6, 2017  7-9pm</font></b></p><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
+          <p2><b><font size="6">April 6, 2017  7-9pm</font></b></p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
         <div class="col-sm-6 image-container bottom">
           <a href="About.html"><h1>About</h1></a></div>
       </div>
