background height;auto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
           <p2><b><font size="6">April 6, 2017  7-9pm</font></b></p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
-        <div class="col-sm-9 col-md-6 col-lg-8 image-container bottom">
+        <div class="col-sm-6 image-container bottom">
           <a href="About.html"><h1>About</h1></a></div>
       </div>
         <div class="col-sm-6 image-container upper-left">
