changed rows/grid to image containers

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-6 image-container top"> <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
-          <p2><b><font size="6">April 6, 2017  7-9pm</font></b></p2><p>The UK Art Museum is pleased to announce Videos for a Stadium, a presentation of sports-related videos by a range of nationally known artists.</p></div>
-        <div class="col-sm-6 image-container bottom">
-          <a href="About.html"><h1>About</h1></a></div>
-      </div>
-        <div class="col-sm-6 image-container upper-left">
-          <a href="Location.html"><h1>Location</h1></a></div>
-        <div class="col-sm-6 image-container upper-right">
-          <a href="Tickets.html"><h1>Tickets</h1></a></div>
-      </div>
-        <div class="row">
-          <div class="col-sm-6 image-container lower-left">
-            <a href="Sponsors.html"><h1>Sponsors</h1></a></div>
-
-      </div>
-      </div>
+    <div class="container-fluid image-container top">
+      <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
+        <p2>April 6, 2017  7-9pm</p2><p>
     </div>
+    <div class="container-fluid image-container bottom">
+      <a href="About.html"><h1>About</h1></a>
+    </div>
+
+    <div class="container-fluid image-container upper-left">
+      <a href="Location.html"><h1>Location</h1></a>
+    </div>
+
+    <div class="continer-fluid image-container upper-right">
+      <a href="Tickets.html"><h1>Tickets</h1></a>
+    </div>
+
+    <div class="container-fluid image-container lower-left">
+      <a href="Sponsors.html"><h1>Sponsors</h1></a>
+    </div>
+
+  
 </body>
