--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </div>
 
     <div class="container-fluid image-container upper-left">
-      <a href="Location.html"><h1>Location</h1></a>
+      <h1>Location</h1></a>
     </div>
 
     <div class="continer-fluid image-container upper-right">
-      <a href="Tickets.html"><h1>Tickets</h1></a>
+      <h1>Tickets</h1></a>
     </div>
 
     <div class="container-fluid image-container lower-left">
-      <a href="Sponsors.html"><h1>Sponsors</h1></a>
+      <h1>Sponsors</h1></a>
     </div>
 
 
