--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href='/videosforastadium/style.css' rel='stylesheet' type='text/css'>
 
+    <meta property="og:title" content="Videos For a Stadium" />
+    <meta property="og:url" content="https://jloh223.github.io/videosforastadium/index.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Facebook example here. Write stuff about stuff that your peeps wanna know stuff about. And more stuff." />
+    <meta property="og:image" content="images/stadium.png" />
+
+
 </head>
 
 <body>
