--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://jloh223.github.io/videosforastadium/index.html" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Facebook example here. Write stuff about stuff that your peeps wanna know stuff about. And more stuff." />
-    <meta property="og:image" content="images/stadium.png" />
+    <meta property="og:image" content="http://jloh223.github.io/videosforastadium/images/stadium.png" />
 
 
 </head>
