og:description updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Videos For a Stadium" />
     <meta property="og:url" content="https://jloh223.github.io/videosforastadium/index.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Facebook example here. Write stuff about stuff that your peeps wanna know stuff about. And more stuff." />
+    <meta property="og:description" content=" Videos For a Stadium will be held on April 7th at Commonwealth Stadium. Click here for tickets and more information." />
     <meta property="og:image" content="http://jloh223.github.io/videosforastadium/images/stadium.png" no-repeat />
 
 
