--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <meta property="og:description" content=" Videos For a Stadium will be held on April 7th at Commonwealth Stadium. Click here for tickets and more information." />
     <meta property="og:image" content="http://jloh223.github.io/videosforastadium/images/stadium.png" no-repeat />
 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@jenniferxlynnn" />
+  <meta name="twitter:title" content="Videos For a Stadium" />
+  <meta name="twitter:description" content="Videos For a Stadium will be held on April 7th at Commonwealth Stadium. Click here for tickets and more information." />
+  <meta name="twitter:image" content="http://jloh223.github.io/videosforastadium/images/stadium.png" no-repeat />
+
 
 </head>
 
