change container names

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
 <body>
 
 
-    <div class="container-fluid image-container top">
+    <div class="container-fluid image-container title">
       <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
         <p2>April 6, 2017  7-9pm</p2><p>
     </div>
-    <div class="container-fluid image-container bottom">
+    <div class="container-fluid image-container about">
       <h1>About</h1>
       <p1>This unique "art meets sports” event explores competition, skill, endurance, teamwork, and body movement. The national anthem, the green grass of various fields, and sports language are also examined. The videos will be presented on the stadium’s high resolution screen and viewed from field level seats in the end zone.</p1>
       <p1>Participating artists include Paul S. Benjamin, Janet Biggs, Victoria Fu, Brett Kashmere, Anya Liftig, Lilly McElroy, Didier Morelli, Michael David Murphy, Alix Pearlstein, Joe Sola, and Scott Stark.</p1>
       <p1>Carl Nathe, the public address announcer at UK Football games, will introduce each artist’s work and provide commentary. Concession food and drinks that are normally available during games will be offered for purchase before and after the screening.</p1>
     </div>
 
-    <div class="container-fluid image-container upper-left">
+    <div class="container-fluid image-container location">
       <h1>Location</h1></a>
     </div>
 
-    <div class="continer-fluid image-container upper-right">
+    <div class="continer-fluid image-container tickets">
       <h1>Tickets</h1></a>
     </div>
 
-    <div class="container-fluid image-container lower-left">
+    <div class="container-fluid image-container sponsors">
       <h1>Sponsors</h1></a>
     </div>
 
