fixed some paragraphs in tickets and sponsor

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
     <div class="continer-fluid image-container upper-right">
       <h1>Tickets</h1></a>
       <p1>
-      Tickets are $15 for general public and $10 for Museum members.
-Funds raised at this event will go to support the Museum’s FREE Admission policy.
-
-Tickets are available online <a href="https://trans.worldpay.us/cgi-bin/WebPAY.cgi?formid=BB250F6BC14110CEDBAD22AF7FDFCB2CD3D1EF04DBC70B6A4745131920DB8B5E&sessionid=AE46DACB8992AE4C">here</a>.
-</p1>
+      Tickets are $15 for general public and $10 for Museum members.<p1>
+      <p1>Funds raised at this event will go to support the Museum’s FREE Admission policy.</p1>
+      <p1>Tickets are available online <a href="https://trans.worldpay.us/cgi-bin/WebPAY.cgi?formid=BB250F6BC14110CEDBAD22AF7FDFCB2CD3D1EF04DBC70B6A4745131920DB8B5E&sessionid=AE46DACB8992AE4C">here</a>.</p1>
     </div>
 
     <div class="container-fluid image-container lower-left">
@@ -59,9 +57,8 @@ Tickets are available online <a href="https://trans.worldpay.us/cgi-bin/WebPAY.c
         <div style="text-align: center">
         <img src="http://static.wixstatic.com/media/122333_4f4a7413f77549f89304a3c8167db76c~mv2.png_srz_310_245_85_22_0.50_1.20_0.00_png_srz">
         <img src="https://static1.squarespace.com/static/55e39f6ce4b0fe8647d21e24/t/58475090725e25ae983ab13f/1481068700469/" width="500px">
-        <p1>
         </div>
-    Videos For a Stadium is sponsored by Creative Lexington and Moontower Music Festival. You can visit them at <a href="http://www.creativelexington.com"> creativelexington.com</a> and <a href="http://www.moontowermusicfestival.com"> moontowermusicfestival.com</a></p1>
+        <p1>Videos For a Stadium is sponsored by Creative Lexington and Moontower Music Festival. You can visit them at <a href="http://www.creativelexington.com"> creativelexington.com</a> and <a href="http://www.moontowermusicfestival.com"> moontowermusicfestival.com</a></p1>
     </div>
 
 
