lot width change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p1>
       The event will be held at Commonwealth Stadium. Free parking is available in the Green Lot behind the stadium. </p1>
         <div style="text-align: center">
-          <img src="https://files.slack.com/files-pri/T0HMSSAQH-F4Q9X5G03/on-campus-permit-parking.png">
+          <img src="https://files.slack.com/files-pri/T0HMSSAQH-F4Q9X5G03/on-campus-permit-parking.png" width="500px">
         </div>
     </div>
 
