--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container-fluid image-container top">
       <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
-        <p2>April 6, 2017  7-9pm</p2><p>
+        <p2>April 6, 2017  7-9pm</p2>
     </div>
     <div class="container-fluid image-container bottom">
       <h1>About</h1>
