add ticket info to header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="container-fluid image-container top">
       <h3>Videos For a Stadium</h3><link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
         <p2>April 6, 2017  7-9pm</p2>
+        <p2>Tickets are available online <a href="https://trans.worldpay.us/cgi-bin/WebPAY.cgi?formid=BB250F6BC14110CEDBAD22AF7FDFCB2CD3D1EF04DBC70B6A4745131920DB8B5E&sessionid=AE46DACB8992AE4C">here</a>.</p2>
     </div>
     <div class="container-fluid image-container bottom">
       <h1>About</h1>
